Fix the tabs alignment

--- a/src/css/settings/_colors.scss
+++ b/src/css/settings/_colors.scss
@@ -43,7 +43,7 @@
   --sidebar-item-active: hsl(212, 15%, 83%);
 
   --tab-background: hsl(212, 4%, 88%);
-  --tab-background-hover: hsl(212, 15%, 96%);
+  --tab-background-hover: rgba(0, 0, 0, 0.1);
 
   --primary-color-lighter: hsl(212, 72%, 75%);
   --primary-color-light: hsl(212, 72%, 69%);
